<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="1dp"
    tools:context=".ui.FinalFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="top"
                android:elevation="5dp"
                android:orientation="vertical"
                tools:targetApi="p">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    android:fontFamily="@font/roboto"
                    android:letterSpacing="0.01"
                    android:lineHeight="24dp"
                    android:lineSpacingExtra="1sp"
                    android:text="@string/details"
                    android:textColor="@color/black"
                    android:textFontWeight="500"
                    android:textSize="20sp"
                    android:translationY="-0.28sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:elevation="5dp"
                android:orientation="vertical"
                android:layout_marginBottom="141dp"
                android:layout_marginTop="24dp">
                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="360dp"
                    android:layout_marginHorizontal="30dp"
                    android:contentDescription="@string/todo"
                    android:elevation="5dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginBottom="68dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image_1" />
                <TextView
                    android:id="@+id/textstat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:letterSpacing="0.03"
                    android:lineHeight="16dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="62dp"
                    android:lineSpacingExtra="2sp"
                    android:text="@string/cosmic"
                    android:textColor="@color/add_text"
                    android:textFontWeight="400"
                    android:textSize="12sp"
                    android:translationY="-0.97sp"
                    tools:targetApi="p" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="62dp"
                    android:fontFamily="@font/roboto"
                    android:letterSpacing="0.01"
                    android:lineHeight="24dp"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/abadango"
                    android:layout_marginBottom="88dp"
                    android:textColor="@color/almost_black"
                    android:textFontWeight="400"
                    android:textSize="16sp"
                    android:translationY="-2.62sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textstat"
                    tools:targetApi="p" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</FrameLayout>